force-app/main/default/objects/FSM_SendTMAUpdates__e/FSM_SendTMAUpdates__e.object-meta.xml
<CustomObject>
    <description>sfi-692,SFI-707</description>
    <label>Send TMA Updates</label>
    <pluralLabel>FSM_SendTMAUpdates</pluralLabel>
</CustomObject>