force-app/main/default/objects/FSM_SendTMAUpdates__e/fields/FSM_EventType__c.field-meta.xml
<CustomField>
    <fullName>FSM_EventType__c</fullName>
    <description>sfi-1614</description>
    <label>Event Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>