force-app/main/default/objects/FSM_SendTMAUpdates__e/fields/FSM_ExcavationOccured__c.field-meta.xml
<CustomField>
    <fullName>FSM_ExcavationOccured__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SFI-692</description>
    <label>Excavation Occured or Not</label>
    <type>Checkbox</type>
</CustomField>