force-app/main/default/objects/FSM_SendTMAUpdates__e/fields/FSM_NoticeState__c.field-meta.xml
<CustomField>
    <fullName>FSM_NoticeState__c</fullName>
    <description>sfi-26</description>
    <label>Notice State</label>
    <length>100</length>
    <type>Text</type>
</CustomField>