force-app/main/default/objects/FSM_SendTMAUpdates__e/fields/FSM_OperationNumber__c.field-meta.xml
<CustomField>
    <fullName>FSM_OperationNumber__c</fullName>
    <description>SFI-2256</description>
    <label>Operation Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>