force-app/main/default/objects/FSM_SendTMAUpdates__e/fields/FSM_ScheduledStartDate__c.field-meta.xml
<CustomField>
    <fullName>FSM_ScheduledStartDate__c</fullName>
    <description>SFI-1807</description>
    <label>Scheduled Start Date</label>
    <type>DateTime</type>
</CustomField>