force-app/main/default/objects/FSM_SendTMAUpdates__e/fields/FSM_SiteClear__c.field-meta.xml
<CustomField>
    <fullName>FSM_SiteClear__c</fullName>
    <defaultValue>false</defaultValue>
    <description>sfi-692</description>
    <label>Site Clear</label>
    <type>Checkbox</type>
</CustomField>