force-app/main/default/objects/FSM_SendTMAUpdates__e/fields/FSM_TMAActualEnd__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAActualEnd__c</fullName>
    <description>sfi-692</description>
    <label>Actual Stop Date</label>
    <type>DateTime</type>
</CustomField>