force-app/main/default/objects/FSM_SendTMAUpdates__e/fields/FSM_TMAActualStart__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAActualStart__c</fullName>
    <description>sfi-26</description>
    <label>Actual Start Date</label>
    <type>DateTime</type>
</CustomField>