force-app/main/default/objects/FSM_SendTMAUpdates__e/fields/FSM_TMAExternalId__c.field-meta.xml
<CustomField>
    <fullName>FSM_TMAExternalId__c</fullName>
    <description>Created as part of SFI-1127</description>
    <label>TMA External Id</label>
    <length>100</length>
    <type>Text</type>
</CustomField>